refactor: follow Repository Pattern and improve data handling
- Refactored code to properly implement the Repository Pattern, separating data access logic.
- Added  to support flexible sorting options.
- Implemented Seek Pagination using  for more efficient paging compared to OFFSET.
- Introduced  field for Soft Delete, preventing permanent data loss.