@@ -9,21 +9,24 @@ import com.TicketSelling.TicketSelling.Entity.Booking;
 import com.TicketSelling.TicketSelling.Entity.Customer;
 import com.TicketSelling.TicketSelling.Entity.Ticket;
 import com.TicketSelling.TicketSelling.Entity.TicketPK;
-import com.TicketSelling.TicketSelling.Enum.TypedSort;
-import com.TicketSelling.TicketSelling.Exception.ApplicationException;
-import com.TicketSelling.TicketSelling.Exception.ErrorCode;
+import com.TicketSelling.TicketSelling.Enum.SortOrder;
 import com.TicketSelling.TicketSelling.Mapper.BookingMapper;
 import com.TicketSelling.TicketSelling.Mapper.CustomMapper.CustomBookingMapper;
 import com.TicketSelling.TicketSelling.Repository.IBookingRepository;
 
 import com.TicketSelling.TicketSelling.Repository.ICustomerRepository;
 import com.TicketSelling.TicketSelling.Repository.ITicketRepository;
+import com.TicketSelling.TicketSelling.Utils.SortUtils;
 import lombok.AccessLevel;
 import lombok.RequiredArgsConstructor;
 import lombok.experimental.FieldDefaults;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
+import java.time.LocalDateTime;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -43,8 +46,15 @@ public class BookingService {
         );
     }
 
-    public List<BookingResponse> getAllBookings(TypedSort typedSort) {
-        return bookingRepository.getAllBookings(typedSort).stream().map(bookingMapper::toBookingResponse).toList();
+    public List<BookingResponse> getAllBookings(SortOrder typedSort) {
+        List<Booking> sortedBooking = SortUtils.sortList(bookingRepository.getAllBookings(),SortOrder.DESC, Booking::getCreatedAt);
+        return sortedBooking.stream().map(bookingMapper::toBookingResponse).toList();
+    }
+
+    public List<BookingResponse> getAllBookings(String customerId, LocalDateTime lastCreatedAt,
+                                                SortOrder sortOrder, int pageSize) {
+        Pageable pageable = PageRequest.of(0, pageSize);
+        return bookingRepository.getBookingsByCustomerId(customerId, lastCreatedAt, sortOrder.name(), pageable).stream().map(bookingMapper::toBookingResponse).collect(Collectors.toList());
     }
 
     // POST
@@ -70,11 +80,8 @@ public class BookingService {
 
     // DELETE
     public void deleteBooking(String bookingId) {
-        if (bookingRepository.existsById(bookingId)) {
-            bookingRepository.deleteBookingById(bookingId);
-        } else {
-            throw new ApplicationException(ErrorCode.NOT_FOUND_ID);
-        }
+        Booking booking = bookingRepository.getBookingById(bookingId);
+        bookingRepository.deleteBooking(booking);
     }
 
 }
